--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   },
   "homepage": "https://github.com/spreex/spreex.github.io#readme",
   "devDependencies": {
-    "gulp-git": "^1.7.1",
-    "gulp-uglifyjs": "^0.6.2",
-    "chai": "^3.5.0",
-    "gulp": "^3.9.0",
-    "karma": "^0.13.19",
-    "karma-bower": "^1.0.1",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-extra-launcher": "^0.1.0",
-    "karma-mocha": "^0.2.1",
-    "mocha": "^2.4.5",
     "bower": "^1.7.7",
+    "chai": "^3.5.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
     "gulp-concat": "^2.6.0",
+    "gulp-git": "^1.7.1",
     "gulp-jekyll": "0.0.0",
     "gulp-less": "^3.0.5",
+    "gulp-uglifyjs": "^0.6.2",
+    "karma": "^0.13.22",
+    "karma-bower": "^1.0.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-extra-launcher": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-mocha": "^0.2.2",
+    "mocha": "^2.5.3",
     "run-sequence": "^1.1.5"
   }
 }
