--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,10 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://spreex.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
 
-url: "http://mydataspace.github.io"
 api_url: "http://api-mydatasp.rhcloud.com"
 api_websocket_url: "http://api-mydatasp.rhcloud.com:8000"
 
