--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "^2.2.4",
     "font-awesome": "fontawesome#^4.6.3",
     "socket.io": "^1.4.5",
-    "socket.io-client": "https://github.com/socketio/socket.io-client.git#^1.4.5"
+    "socket.io-client": "https://github.com/socketio/socket.io-client.git#^1.4.5",
+    "remarkable": "^1.6.2"
   }
 }
