--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,10 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://spreex.github.io"
-twitter_username: jekyllrb
-github_username:  jekyll
 
 api_url: "http://api-mydatasp.rhcloud.com"
 api_websocket_url: "http://api-mydatasp.rhcloud.com:8000"
+client_id: "3091a439-33da-10da-e7f0-4dc2b52bafde"
 
 # Build settings
 markdown: kramdown
