--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,11 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://spreex.github.io"
+url: "https://spreex.github.io"
+enforce_ssl: spreex.github.io
 
-api_url: "http://api-mydatasp.rhcloud.com"
-api_websocket_url: "http://api-mydatasp.rhcloud.com:8000"
+api_url: "https://api.my-data.space"
+api_websocket_url: "https://api.my-data.space:8443"
 client_id: "3091a439-33da-10da-e7f0-4dc2b52bafde"
 
 # Build settings
